src/test/deca/context/invalid/without_class/wrong_list_declaration.deca
// Description:
//    Error in use of list declaration with ; instead of ,
//
// Result:
//    UNDEFINED_VAR: Variable y is undefined
//    line 9

{    
    float x; y; z;
}